samples/_failures_safe/1761531320_3ac69e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ef82c06.c: In function ‘main’:
./samples/SAFE/__tmp_7ef82c06.c:178:5: error: expected declaration or statement at end of input
  178 |     char input[1024];
      |     ^~~~
